tests/baselines/reference/genericFunduleInModule2.errors.txt
==== tests/cases/compiler/genericFunduleInModule2.ts (1 errors) ====
    module A {
        export function B<T>(x: T) { return x; }
    }
    
    module A {
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
             ~
!!! genericFunduleInModule2.ts(11,10): error TS2094: The property 'B' does not exist on value of type 'A'.
    A.B(1);